# FastApi_SRN

./: .gitignore  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8a1cf41c85b0_create_profile_table.py  d4f362256199_create_products_table.py  f5e8f9121b4c_create_posts_table.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
